--- a/assets/css/personalizado.css
+++ b/assets/css/personalizado.css
@@ -177,7 +177,7 @@
 {
   background-image: url(../images/actions/edit.png);
   background-repeat:no-repeat;
-  width: auto;
+  width: 40px;
   height: auto;
   background-position:center;
   background-color: transparent;
@@ -434,7 +434,7 @@ label:hover:before {
   background-color: red;
   color: white !important;
   font-weight: bolder;
-  border-radius: 16px;
+  border-radius: 8px;
   padding: 5px;
 }
 
@@ -443,7 +443,7 @@ label:hover:before {
   background-color: green;
   color: white !important;
   font-weight: bolder;
-  border-radius: 16px;
+  border-radius: 8px;
   padding: 5px;
 }
 
@@ -452,7 +452,7 @@ label:hover:before {
   background-color: orange;
   color: white !important;
   font-weight: bolder;
-  border-radius: 16px;
+  border-radius: 8px;
   padding: 5px;
 }
 
@@ -481,9 +481,37 @@ label:hover:before {
   font-size: 12px !important;
 }
 
-.select2
+
+.pildoracliente
 {
-  width: 100% !important;
+  border: 1px solid black;
+background-color: gray;
+color: white;
+border-radius: 4px;
+padding: 0px 5px 0px 5px;
+margin: 0px 0px 1px 0px;
+font-size: 12px;
+text-align: left;
+width: max-content;
 }
 
+.botonnuevocliente
+{
+  margin-top: 2px;
+  background-color: aliceblue;
+}
 
+.modalnuevocliente .input-group-prepend
+{
+  width:30% !important;
+}
+
+.modalnuevocliente .input-group-text
+{
+  width:100% !important;
+}
+
+.ocultar
+{
+  display: none !important;
+}
